<resources>
    <string name="app_name">UniCarApp</string>

    <string name="label_email">Email</string>
    <string name="label_domain">\@mydomain.rest</string>
    <string name="label_password">Password</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_department">Department</string>
    <string name="label_photo">Photo</string>
    <string name="label_car_plate">Plate</string>
    <string name="label_car_color">Color</string>
    <string name="label_car_model">Model</string>

    <string name="label_login_info_1">Insert a valid email to proceed</string>
    <string name="label_login_info_2">Tell me about yourself...</string>
    <string name="label_login_info_3">Please, insert some information about your car:</string>
    <string name="label_login">LOGIN</string>
    <string name="label_signup">SIGNUP</string>
    <string name="label_next_step">Next step</string>
    <string name="label_goto_summary">Go to summary</string>
    <string name="label_has_car">Wanna share your car?</string>

    <string name="label_summary_user_info">User Information</string>
    <string name="label_summary_car_info">Car Information</string>
    <string name="label_summary_email">Email: %1$s</string>
    <string name="label_summary_firstname">Firstname: %1$s</string>
    <string name="label_summary_lastname">Lastname: %1$s</string>
    <string name="label_summary_department">Department: %1$s</string>
    <string name="label_summary_car_plate">Plate: %1$s</string>
    <string name="label_summary_car_color">Color: %1$s</string>
    <string name="label_summary_car_model">Model: %1$s</string>

    <string name="error_email">The email is not valid!</string>
    <string name="error_password">The password is not valid!</string>

    <!-- Login Activity. -->
    <string name="welcome_message">Welcome to UniCar</string>

    <!-- Main Menu -->
    <string name="label_profile">Profile</string>
    <string name="label_history">History</string>
    <string name="label_settings">Settings</string>

    <string name="description_logo_iv">Logo</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
